--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gmail-bulkdelete-nodejs",
-  "version": "1.0.1",
-  "description": "A simple Node.js command-line application that bulk trashes/deletes emails by search query using the Gmail API.",
+  "version": "1.0.2",
+  "description": "A simple Node.js command-line script that bulk deletes emails by search query using the Gmail API.",
   "dependencies": {
     "googleapis": "^39.0.0",
     "google-auth-library": "^4.2.2",
